# capstone_ml_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 1_data_an_task.ipynb  2_cluster_k_means.ipynb  3_decision_tree.ipynb  4_ensemble_model_random_forest.ipynb  5_support_vector_machine.ipynb  6_comparator_and_visualizations.ipynb  cluster_k_means.ipynb  comparator.ipynb  decision_boundary.ipynb  decision_tree.ipynb  ensemble_model.ipynb  ensemble_model_random_forest.ipynb  graph_for_input_data.ipynb  malicious_benign.ipynb  support_vector_machine.ipynb  utility.py
